fix: Enhance user bubble spacing

--- a/src/chatbot.css
+++ b/src/chatbot.css
@@ -27,8 +27,8 @@
 .docsbot-user-chat-message {
   background-color: #fff;
   padding: 10px;
-  border-radius: 15px;
-  margin-left: 50px;
+  border-radius: 8px;
+  margin-left: 32px;
   border: 0.5px solid rgb(197, 206, 214);
   font-size: 14.4px;
   line-height: 1.4;
